[project]
name = "project-2"
version = "0.1.0"
description = ""
authors = [
    {name = "jmelendezgeo"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ruff (>=0.11.12,<0.12.0)",
    "fire (>=0.7.0,<0.8.0)",
    "dbt-duckdb[md] (>=1.9.3,<2.0.0)",
    "dbt-core (>=1.9.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
